// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifGrid Cargar componente GifGrid correctamente 1`] = `
<Fragment>
  <h3
    className="category-title animate__animated animate__fadeIn"
  >
    naruto
  </h3>
  <Spinner />
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en el componente GifGrid Debe de mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="category-title animate__animated animate__fadeIn"
  >
    naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="1"
      key="1"
      title="Example"
      url="http://example.com/image.png"
    />
  </div>
</Fragment>
`;
